[gd_scene load_steps=35 format=2]

[ext_resource path="res://addons/zylann.hterrain/hterrain.gd" type="Script" id=1]
[ext_resource path="res://levels/level1/Player.gd" type="Script" id=2]
[ext_resource path="res://levels/level1/level3/data.hterrain" type="Resource" id=3]
[ext_resource path="res://addons/zylann.hterrain/hterrain_detail_layer.gd" type="Script" id=4]
[ext_resource path="res://sound/hurt1.ogg" type="AudioStream" id=5]
[ext_resource path="res://actors/TigerPlant.tscn" type="PackedScene" id=6]
[ext_resource path="res://sprites/stones.png" type="Texture" id=7]
[ext_resource path="res://sprites/grass_splat.png" type="Texture" id=8]
[ext_resource path="res://sprites/grass.png" type="Texture" id=9]
[ext_resource path="res://sprites/bush.png" type="Texture" id=10]
[ext_resource path="res://sprites/pebbles.png" type="Texture" id=11]
[ext_resource path="res://levels/level1/Level.gd" type="Script" id=12]
[ext_resource path="res://objects/Fence.tscn" type="PackedScene" id=13]
[ext_resource path="res://objects/LampPost.tscn" type="PackedScene" id=14]
[ext_resource path="res://sprites/joe.tres" type="SpriteFrames" id=15]
[ext_resource path="res://levels/level1/SFX.gd" type="Script" id=16]
[ext_resource path="res://sound/walk_step.wav" type="AudioStream" id=17]
[ext_resource path="res://gui/GUIOverlay.tscn" type="PackedScene" id=18]
[ext_resource path="res://sound/eating_short.ogg" type="AudioStream" id=19]
[ext_resource path="res://actors/Animal.tscn" type="PackedScene" id=20]
[ext_resource path="res://sprites/dirt.png" type="Texture" id=21]
[ext_resource path="res://sound/FeedMeee.ogg" type="AudioStream" id=22]
[ext_resource path="res://sprites/piglet.tres" type="SpriteFrames" id=23]
[ext_resource path="res://sound/die.ogg" type="AudioStream" id=25]
[ext_resource path="res://actors/Villager.tscn" type="PackedScene" id=28]
[ext_resource path="res://sound/game_music.ogg" type="AudioStream" id=29]
[ext_resource path="res://sky/sky.tres" type="ProceduralSky" id=30]
[ext_resource path="res://addons/zylann.hterrain/tools/icons/icon_detail_layer_node.svg" type="Texture" id=31]
[ext_resource path="res://sprites/tree.png" type="Texture" id=32]

[sub_resource type="Environment" id=1]
background_mode = 2
background_sky = ExtResource( 30 )
background_color = Color( 0.572549, 0.956863, 0.984314, 1 )
ambient_light_color = Color( 1, 1, 1, 1 )
fog_enabled = true
fog_color = Color( 0, 0, 0, 1 )
fog_sun_color = Color( 0, 0, 0, 1 )
fog_depth_begin = 12.0
fog_depth_end = 40.0
fog_depth_curve = 0.517632
fog_transmit_curve = 0.965938
ssao_radius = 2.0
ssao_quality = 0
dof_blur_far_enabled = true
dof_blur_far_distance = 7.5
dof_blur_far_quality = 2
dof_blur_near_enabled = true
dof_blur_near_distance = 5.0
glow_intensity = 4.0
glow_strength = 1.5
glow_hdr_threshold = 1.13
glow_bicubic_upscale = true
adjustment_brightness = 0.82
adjustment_contrast = 1.18
adjustment_saturation = 1.26

[sub_resource type="CapsuleShape" id=2]
radius = 0.207773
height = 0.098466

[sub_resource type="SpatialMaterial" id=3]
flags_albedo_tex_force_srgb = true
params_cull_mode = 2
params_depth_draw_mode = 3
params_use_alpha_scissor = true
params_alpha_scissor_threshold = 0.5

[sub_resource type="SphereShape" id=4]

[sub_resource type="BoxShape" id=5]
extents = Vector3( 0.696539, 2.99078, 7.12252 )

[node name="Level" type="Spatial"]
script = ExtResource( 12 )
scores = {
"cow": 3,
"joe": 1,
"pig": 2,
"redneck": 3
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="HTerrain" type="Spatial" parent="." groups=[
"terrain",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -64, 0, -64 )
script = ExtResource( 1 )
collision_enabled = true
ambient_wind = 0.2
lod_scale = 2.0
map_scale = Vector3( 0.25, 0.25, 0.25 )
_terrain_data = ExtResource( 3 )
chunk_size = 32
shader_type = "Classic4Lite"
custom_shader = null
shader_params/u_ground_uv_scale = 5.0
shader_params/u_depth_blending = true
shader_params/u_triplanar = false
ground/albedo_bump_0 = ExtResource( 9 )
ground/normal_roughness_0 = null
ground/albedo_bump_1 = ExtResource( 7 )
ground/normal_roughness_1 = null
ground/albedo_bump_2 = ExtResource( 21 )
ground/normal_roughness_2 = null
ground/albedo_bump_3 = null
ground/normal_roughness_3 = null

[node name="Grass" type="Spatial" parent="HTerrain"]
script = ExtResource( 4 )
layer_index = 0
texture = ExtResource( 8 )
view_distance = 100.0
custom_shader = null
density = 10.0
shader_params/u_globalmap_tint_bottom = 0.121
shader_params/u_globalmap_tint_top = 0.263
shader_params/u_bottom_ao = 0.0

[node name="Bushes" type="Spatial" parent="HTerrain"]
script = ExtResource( 4 )
layer_index = 1
texture = ExtResource( 10 )
view_distance = 100.0
custom_shader = null
density = 4.0
shader_params/u_globalmap_tint_bottom = null
shader_params/u_globalmap_tint_top = null
shader_params/u_bottom_ao = null

[node name="Rocks" type="Spatial" parent="HTerrain"]
script = ExtResource( 4 )
layer_index = 2
texture = ExtResource( 11 )
view_distance = 100.0
custom_shader = null
density = 4.0
shader_params/u_globalmap_tint_bottom = null
shader_params/u_globalmap_tint_top = null
shader_params/u_bottom_ao = null

[node name="Trees" type="Spatial" parent="HTerrain"]
script = ExtResource( 4 )
__meta__ = {
"_editor_icon": ExtResource( 31 )
}
layer_index = 3
texture = ExtResource( 32 )
view_distance = 100.0
custom_shader = null
density = 4.0
shader_params/u_globalmap_tint_bottom = null
shader_params/u_globalmap_tint_top = null
shader_params/u_bottom_ao = null

[node name="Fences" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.08707, 0 )

[node name="Fence" parent="Fences" instance=ExtResource( 13 )]
transform = Transform( 0.969373, 0, 0.245595, 0, 1, 0, -0.245595, 0, 0.969373, 2.77715, -0.152264, -9.16048 )

[node name="Fence8" parent="Fences" instance=ExtResource( 13 )]
transform = Transform( -0.270096, 0, 0.962833, 0, 1, 0, -0.962833, 0, -0.270096, 3.80378, -0.209868, -11.8595 )

[node name="Fence11" parent="Fences" instance=ExtResource( 13 )]
transform = Transform( -0.99897, 0, -0.0453806, 0, 1, 0, 0.0453806, 0, -0.99897, 1.01591, -0.0332422, -13.2431 )

[node name="Fence5" parent="Fences" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.04109, -0.28304, -8.77442 )

[node name="Fence2" parent="Fences" instance=ExtResource( 13 )]
transform = Transform( 0.749846, 0, 0.661613, 0, 1, 0, -0.661613, 0, 0.749846, 3.68398, -0.20474, -9.75714 )

[node name="Fence3" parent="Fences" instance=ExtResource( 13 )]
transform = Transform( 0.64419, 0, -0.764865, 0, 1, 0, 0.764865, 0, 0.64419, -0.0772966, -0.238826, -8.425 )

[node name="Fence16" parent="Fences" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.63771, -0.185481, -9.00168 )

[node name="Fence17" parent="Fences" instance=ExtResource( 13 )]
transform = Transform( -0.0672264, 0.994954, 0.0744733, -0.404633, -0.095416, 0.909488, 0.912005, 0.0310072, 0.409006, 1.74015, 0.21059, -8.48332 )

[node name="Fence7" parent="Fences" instance=ExtResource( 13 )]
transform = Transform( -0.783054, 0, 0.621955, 0, 1, 0, -0.621955, 0, -0.783054, 3.25739, -0.295296, -12.9395 )

[node name="Fence6" parent="Fences" instance=ExtResource( 13 )]
transform = Transform( -0.025357, 0, 0.999678, 0, 1, 0, -0.999678, 0, -0.025357, 3.99143, -0.243086, -10.7244 )

[node name="Fence10" parent="Fences" instance=ExtResource( 13 )]
transform = Transform( -0.99998, 0, -0.0063529, 0, 1, 0, 0.0063529, 0, -0.99998, -0.184131, -0.0626467, -13.1798 )

[node name="Fence15" parent="Fences" instance=ExtResource( 13 )]
transform = Transform( -0.940579, 0, -0.339575, 0, 1, 0, 0.339575, 0, -0.940579, -1.25065, -0.22629, -13.016 )

[node name="Fence9" parent="Fences" instance=ExtResource( 13 )]
transform = Transform( -0.999683, 0, 0.0251997, 0, 1, 0, -0.0251997, 0, -0.999683, 2.18141, -0.196907, -13.2185 )

[node name="Fence4" parent="Fences" instance=ExtResource( 13 )]
transform = Transform( 0.474534, 0, -0.880237, 0, 1, 0, 0.880237, 0, 0.474534, -1.87399, -0.326697, -9.32129 )

[node name="Fence12" parent="Fences" instance=ExtResource( 13 )]
transform = Transform( 0.329394, 0, -0.944192, 0, 1, 0, 0.944192, 0, 0.329394, -2.41386, -0.326697, -10.343 )

[node name="Fence13" parent="Fences" instance=ExtResource( 13 )]
transform = Transform( -0.163911, 0, -0.986475, 0, 1, 0, 0.986475, 0, -0.163911, -2.41386, -0.409135, -11.3494 )

[node name="Fence14" parent="Fences" instance=ExtResource( 13 )]
transform = Transform( -0.508064, 0, -0.861319, 0, 1, 0, 0.861319, 0, -0.508064, -1.90167, -0.31711, -12.3249 )

[node name="Lamps" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.04096, 0 )

[node name="LampPost" parent="Lamps" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.43166, 0.223281, 17.9772 )

[node name="LampPost3" parent="Lamps" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.9865, 0.0117109, 7.62039 )

[node name="LampPost4" parent="Lamps" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.35608, 0.791372, 5.47666 )

[node name="LampPost9" parent="Lamps" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.34894, -0.265394, 3.16228 )

[node name="LampPost5" parent="Lamps" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.96686, 0.0117109, 4.4962 )

[node name="LampPost6" parent="Lamps" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.983701, 0.0117109, 10.9198 )

[node name="LampPost7" parent="Lamps" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.6675, 0.0117109, -3.69354 )

[node name="LampPost8" parent="Lamps" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.06554, -0.279049, -9.17472 )

[node name="LampPost2" parent="Lamps" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.458278, -0.315842, -8.81891 )

[node name="Player" type="KinematicBody" parent="." groups=[
"food",
"huntable",
"joe",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.34343, 1.6665, 16.0631 )
script = ExtResource( 2 )
MAX_SPEED = 7.0
JUMP_SPEED = 6.0

[node name="RayCast" type="RayCast" parent="Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.15, 0 )
enabled = true

[node name="Camera" type="Camera" parent="Player"]
transform = Transform( 1, 0, 0, 0, 0.68724, 0.726431, 0, -0.726431, 0.68724, -9.53674e-07, 4.73671, 4.3841 )
current = true
size = 4.0
near = 0.01
far = 35.0

[node name="CollisionShape" type="CollisionShape" parent="Player"]
transform = Transform( 1, -2.98023e-08, 2.98023e-08, 7.45058e-08, -7.35137e-08, -1, -4.47035e-08, 1, -1.39091e-08, -2.15431e-16, 0.242554, 7.22867e-09 )
shape = SubResource( 2 )

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.36926, 0 )
material_override = SubResource( 3 )
cast_shadow = 2
pixel_size = 0.025
billboard = 1
transparent = false
shaded = true
alpha_cut = 2
frames = ExtResource( 15 )
animation = "idle"
playing = true

[node name="Spot" type="SpotLight" parent="Player"]
transform = Transform( 1, -1.14939e-16, -4.28958e-16, 4.4409e-16, 0.258819, 0.965926, 1.05879e-22, -0.965926, 0.258819, 0, 5.316, 2.61207 )
light_color = Color( 0.988235, 0.984314, 0.968627, 1 )
light_indirect_energy = 2.0
light_bake_mode = 0
shadow_enabled = true
shadow_bias = 0.1
spot_range = 16.0
spot_attenuation = 1.31951
spot_angle_attenuation = 4.0

[node name="HoldMount" type="Position3D" parent="Player"]
transform = Transform( -1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0, 1, 0, 0.635046, -0.152209 )

[node name="Area" type="Area" parent="Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.272394, 0 )
gravity = 0.0
linear_damp = 0.0
angular_damp = 0.0

[node name="CollisionShape" type="CollisionShape" parent="Player/Area"]
shape = SubResource( 4 )

[node name="PlayerHurt" type="AudioStreamPlayer3D" parent="Player"]
stream = ExtResource( 5 )

[node name="SFX" type="Node" parent="."]
script = ExtResource( 16 )

[node name="WalkStep" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 17 )
volume_db = -25.0
bus = "SFXPlayer"

[node name="Eating" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 19 )
bus = "SFXPlant"

[node name="PlayerDie" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 25 )
bus = "SFXPlayer"

[node name="BGM" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 29 )
volume_db = -10.0
bus = "BGM"

[node name="Animals" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.99913, 0 )

[node name="Cow1" parent="Animals" groups=[
"cow",
] instance=ExtResource( 20 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.300506, 0.385901, -9.69358 )

[node name="Cow4" parent="Animals" groups=[
"cow",
] instance=ExtResource( 20 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.71286, 0.385901, -11.5124 )

[node name="Cow5" parent="Animals" groups=[
"cow",
] instance=ExtResource( 20 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.614648, 0.385901, -11.2312 )

[node name="Cow2" parent="Animals" groups=[
"cow",
] instance=ExtResource( 20 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.33151, 0.385901, -10.0444 )

[node name="Cow3" parent="Animals" groups=[
"cow",
] instance=ExtResource( 20 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8.49412, 0.57921, 7.54287 )

[node name="Piglet" parent="Animals" groups=[
"pig",
] instance=ExtResource( 20 )]
transform = Transform( 0.561818, 0, 0, 0, 0.561818, 0, 0, 0, 1, 0.602338, 0.145164, -9.36789 )
SPRITE = ExtResource( 23 )

[node name="Piglet2" parent="Animals" groups=[
"pig",
] instance=ExtResource( 20 )]
transform = Transform( 0.561818, 0, 0, 0, 0.561818, 0, 0, 0, 1, -1.63844, 0.145164, -10.1768 )
SPRITE = ExtResource( 23 )

[node name="Piglet3" parent="Animals" groups=[
"pig",
] instance=ExtResource( 20 )]
transform = Transform( 0.561818, 0, 0, 0, 0.561818, 0, 0, 0, 1, 5.23014, 0.271623, -8.26171 )
SPRITE = ExtResource( 23 )

[node name="Piglet4" parent="Animals" groups=[
"pig",
] instance=ExtResource( 20 )]
transform = Transform( 0.561818, 0, 0, 0, 0.561818, 0, 0, 0, 1, 4.53622, 0.285306, -5.29017 )
SPRITE = ExtResource( 23 )

[node name="Villager" parent="Animals" groups=[
"redneck",
] instance=ExtResource( 28 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.566549, -2.22586 )
HEALTH = 10.0
MAX_HUNGER = 3.0
MAX_TIRED = 3.0
AI_DECISION_SPEED = 2.0
GRAVITY = -24.8
MAX_SPEED = 2.5
ACCEL = 4.0
DEACCEL = 16.0
MAX_SLOPE_ANGLE = 30.0
NUDGE_BACK_INNER = 1.5
NUDGE_BACK_OUTER = 7.0

[node name="Villager2" parent="Animals" groups=[
"redneck",
] instance=ExtResource( 28 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.63007, 0.566549, -5.81271 )
HEALTH = 10.0
MAX_HUNGER = 3.0
MAX_TIRED = 3.0
AI_DECISION_SPEED = 2.0
GRAVITY = -24.8
MAX_SPEED = 2.5
ACCEL = 4.0
DEACCEL = 16.0
MAX_SLOPE_ANGLE = 30.0
NUDGE_BACK_INNER = 1.5
NUDGE_BACK_OUTER = 7.0

[node name="Villager3" parent="Animals" groups=[
"redneck",
] instance=ExtResource( 28 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10.0822, 0.566549, 7.04768 )
HEALTH = 10.0
MAX_HUNGER = 3.0
MAX_TIRED = 3.0
AI_DECISION_SPEED = 2.0
GRAVITY = -24.8
MAX_SPEED = 2.5
ACCEL = 4.0
DEACCEL = 16.0
MAX_SLOPE_ANGLE = 30.0
NUDGE_BACK_INNER = 1.5
NUDGE_BACK_OUTER = 7.0

[node name="Villager4" parent="Animals" groups=[
"redneck",
] instance=ExtResource( 28 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8.63093, 0.566549, -5.49153 )
HEALTH = 10.0
MAX_HUNGER = 3.0
MAX_TIRED = 3.0
AI_DECISION_SPEED = 2.0
GRAVITY = -24.8
MAX_SPEED = 2.5
ACCEL = 4.0
DEACCEL = 16.0
MAX_SLOPE_ANGLE = 30.0
NUDGE_BACK_INNER = 1.5
NUDGE_BACK_OUTER = 7.0

[node name="TigerPlant" parent="." instance=ExtResource( 6 )]
transform = Transform( 1.32205, 0, -0.470918, 0, 1.40342, 0, 0.470918, 0, 1.32205, 13.3885, 1.09797, 9.78304 )
FLIP_SPRITE = true

[node name="FeedMee" type="AudioStreamPlayer3D" parent="TigerPlant"]
stream = ExtResource( 22 )
bus = "SFXPlant"

[node name="ImHungry" type="AudioStreamPlayer3D" parent="TigerPlant"]
bus = "SFXPlant"

[node name="LevelBounds" type="Spatial" parent="."]

[node name="Wall" type="KinematicBody" parent="LevelBounds"]
transform = Transform( 0.989364, 0, 0.145461, 0, 1, 0, -0.145461, 0, 0.989364, -10.846, 2.6502, 18.3229 )

[node name="CollisionShape" type="CollisionShape" parent="LevelBounds/Wall"]
shape = SubResource( 5 )

[node name="Wall2" type="KinematicBody" parent="LevelBounds"]
transform = Transform( 0.17143, 0, 0.985196, 0, 1, 0, -0.985196, 0, 0.17143, -4.49161, 2.6502, 24.8112 )

[node name="CollisionShape" type="CollisionShape" parent="LevelBounds/Wall2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.117598, 0, 0.869327 )
shape = SubResource( 5 )

[node name="Wall3" type="KinematicBody" parent="LevelBounds"]
transform = Transform( -0.962838, 0, 0.270079, 0, 1, 0, -0.270079, 0, -0.962838, 4.4938, 2.6502, 20.2867 )

[node name="CollisionShape" type="CollisionShape" parent="LevelBounds/Wall3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.117598, 0, 0.869327 )
shape = SubResource( 5 )

[node name="Wall4" type="KinematicBody" parent="LevelBounds"]
transform = Transform( 0.216814, 0, 0.976213, 0, 1, 0, -0.976213, 0, 0.216814, 12.5174, 2.6502, 14.3255 )

[node name="CollisionShape" type="CollisionShape" parent="LevelBounds/Wall4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.117598, 0, 0.869327 )
shape = SubResource( 5 )

[node name="Wall5" type="KinematicBody" parent="LevelBounds"]
transform = Transform( -0.967077, 0, 0.254483, 0, 1, 0, -0.254483, 0, -0.967077, 18.1039, 2.6502, 12.4026 )

[node name="CollisionShape" type="CollisionShape" parent="LevelBounds/Wall5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.117598, 0, 0.869327 )
shape = SubResource( 5 )

[node name="Wall6" type="KinematicBody" parent="LevelBounds"]
transform = Transform( -0.577202, 0, -0.816602, 0, 1, 0, 0.816602, 0, -0.577202, 15.8746, 2.6502, 2.39692 )

[node name="CollisionShape" type="CollisionShape" parent="LevelBounds/Wall6"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.117598, 0, 0.869327 )
shape = SubResource( 5 )

[node name="Wall7" type="KinematicBody" parent="LevelBounds"]
transform = Transform( -0.992128, 0, 0.125229, 0, 1, 0, -0.125229, 0, -0.992128, 10.7952, 3.05692, -7.65798 )

[node name="CollisionShape" type="CollisionShape" parent="LevelBounds/Wall7"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.117598, 0, 0.869327 )
shape = SubResource( 5 )

[node name="Wall8" type="KinematicBody" parent="LevelBounds"]
transform = Transform( -0.56139, 0, -0.827551, 0, 1, 0, 0.827551, 0, -0.56139, 6.41877, 3.05692, -16.9498 )

[node name="CollisionShape" type="CollisionShape" parent="LevelBounds/Wall8"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.117598, 0, 0.869327 )
shape = SubResource( 5 )

[node name="Wall9" type="KinematicBody" parent="LevelBounds"]
transform = Transform( 0.287562, 0, -0.957762, 0, 1, 0, 0.957762, 0, 0.287562, -5.5288, 3.05692, -19.5376 )

[node name="CollisionShape" type="CollisionShape" parent="LevelBounds/Wall9"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.117598, 0, 0.869327 )
shape = SubResource( 5 )

[node name="Wall10" type="KinematicBody" parent="LevelBounds"]
transform = Transform( 0.936428, 0, -0.350861, 0, 1, 0, 0.350861, 0, 0.936428, -14.3119, 3.05692, -12.8189 )

[node name="CollisionShape" type="CollisionShape" parent="LevelBounds/Wall10"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.117598, 0, 0.869327 )
shape = SubResource( 5 )

[node name="Wall11" type="KinematicBody" parent="LevelBounds"]
transform = Transform( 0.961822, 0, 0.273675, 0, 1, 0, -0.273675, 0, 0.961822, -13.7748, 3.05692, 5.31441 )

[node name="CollisionShape" type="CollisionShape" parent="LevelBounds/Wall11"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.117598, 0, 0.869327 )
shape = SubResource( 5 )

[node name="Wall12" type="KinematicBody" parent="LevelBounds"]
transform = Transform( 0.997138, 0, 0.0756059, 0, 1, 0, -0.0756059, 0, 0.997138, -15.7826, 3.05692, -4.46453 )

[node name="CollisionShape" type="CollisionShape" parent="LevelBounds/Wall12"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.117598, 0, 0.869327 )
shape = SubResource( 5 )

[node name="GUIOverlay" parent="." instance=ExtResource( 18 )]
